updated run for video

--- a/notebooks/OnlineNormSoftmax.ipynb
+++ b/notebooks/OnlineNormSoftmax.ipynb
@@ -55,12 +55,26 @@
     "![online normalizer calculation for softmax](img/softmax_online.png)\n",
     "\n",
     "Essentially, the algorithm keeps the maximum value $m$ and the normalization term $d$ as it iterates\n",
-    "over elements of the input array. The final result is still numerically stable.\n",
+    "over elements of the input array. The final result is the same as safe softmax and also numerically stable, but less memory access.\n",
     "\n",
     "**(maybe a) problem**: additonal math operations per vector element. \n",
     "\n",
-    "**However, the algorithm works well on GPU  which have high arithmetic throughput but relatively lower memory bandwidth compared to their computational power.**\n",
+    "However, the algorithm works well on GPU  which have high arithmetic throughput but relatively lower memory bandwidth compared to their computational power. According to the paper, online method accelerates by up to 1.3x on GPU.\n",
+    "\n",
+    "*Question: will online approach also be effective on CPU?*\n",
+    "\n",
+    "Let's find it out by experimenting with the Mojo lang!\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Development plan\n",
+    "* extend the simple `Matrix` struct from official tutorial\n",
+    "* implement the `Column` struct to denote logits\n",
+    "* benchmark"
    ]
   },
   {
@@ -79,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,14 +152,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "error: \u001b[0;1;31m\u001b[1mExpression [20]:2:10: \u001b[0m\u001b[1m'Matrix[1, 1]' is not copyable because it has no '__copyinit__'\n",
+      "error: \u001b[0;1;31m\u001b[1mExpression [2]:2:10: \u001b[0m\u001b[1m'Matrix[1, 1]' is not copyable because it has no '__copyinit__'\n",
       "\u001b[0mvar m1 = m0;\n",
       "\u001b[0;1;32m         ^~\n",
       "\u001b[0m\u001b[0m"
@@ -173,14 +187,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "error: \u001b[0;1;31m\u001b[1mExpression [21]:2:12: \u001b[0m\u001b[1m'Matrix[1, 1]' is not copyable or movable because it has no '__copyinit__' or '__moveinit__' member\n",
+      "error: \u001b[0;1;31m\u001b[1mExpression [3]:2:12: \u001b[0m\u001b[1m'Matrix[1, 1]' is not copyable or movable because it has no '__copyinit__' or '__moveinit__' member\n",
       "\u001b[0mvar m1 = m0^\n",
       "\u001b[0;1;32m           ^\n",
       "\u001b[0m\u001b[0m"
@@ -213,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,8 +252,8 @@
     "        self.data = DTypePointer[type].alloc(n)\n",
     "        memcpy[rows * cols](self.data, existing.data)\n",
     "\n",
-    "    #fn __moveinit__(inout self, owned existing: Self):\n",
-    "        # self.data = existing.data\n",
+    "    fn __moveinit__(inout self, owned existing: Self):\n",
+    "        self.data = existing.data\n",
     "        # destructor of `existing` is disabled,\n",
     "        # don't worry the resource is released twice\n",
     "\n",
@@ -268,14 +282,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.67886471748352051 = 0.67886471748352051\n"
+      "0.458650141954422 = 0.458650141954422\n"
      ]
     }
    ],
@@ -298,14 +312,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "error: \u001b[0;1;31m\u001b[1mExpression [24] wrapper:16:7: \u001b[0m\u001b[1m'm2' is uninitialized at the implicit return from this function\n",
+      "error: \u001b[0;1;31m\u001b[1mExpression [9] wrapper:14:7: \u001b[0m\u001b[1m'm2' is uninitialized at the implicit return from this function\n",
       "\u001b[0m  def __mojo_repl_expr_body__() -> None:\n",
       "\u001b[0;1;32m      ^\n",
       "\u001b[0m\u001b[0m"
@@ -315,7 +329,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[0;1;30m\u001b[1mExpression [24]:1:1: \u001b[0m\u001b[1m'm2' declared here\n",
+      "\u001b[0;1;30m\u001b[1mExpression [9]:1:1: \u001b[0m\u001b[1m'm2' declared here\n",
       "\u001b[0mvar m2 = Matrix[1,1].rand()\n",
       "\u001b[0;1;32m^\n",
       "\u001b[0m\u001b[0m\n",
@@ -439,17 +453,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "logits 0.98255026340484619 0.75335586071014404 0.072685882449150085 0.88470715284347534\n",
-      "probabilities\t 0.15293651819229126 0.12161112576723099 0.061569001525640488 0.13868147134780884\n",
+      "logits 0.52692878246307373 0.65391898155212402 0.70119059085845947 0.76219803094863892\n",
+      "probabilities\t 0.091158203780651093 0.1035015657544136 0.10851173847913742 0.11533787101507187\n",
       "expected sum=1 actual= 1.0\n",
-      "True\n",
       "True\n"
      ]
     }
@@ -460,13 +473,11 @@
     "var probs = logits.softmax()\n",
     "print(\"probabilities\\t\", probs[0], probs[1], probs[2], probs[3])\n",
     "var probs_online = logits.softmax_online()\n",
-    "var probs_unrolled = logits.softmax_unroll()\n",
     "var s: Scalar[type] = 0.0\n",
     "for i in range(10):\n",
     "    s += probs[i]\n",
     "print(\"expected sum=1\", \"actual=\", s)\n",
-    "print(probs == probs_online)\n",
-    "print(probs == probs_unrolled)"
+    "print(probs == probs_online)"
    ]
   },
   {
@@ -487,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -511,27 +522,27 @@
       "---------------------\n",
       "Benchmark Report (ms)\n",
       "---------------------\n",
-      "Mean: 94.32451648\n",
-      "Total: 2358.1129120000001\n",
-      "Iters: 25\n",
-      "Warmup Mean: 94.027575999999996\n",
-      "Warmup Total: 188.05515199999999\n",
+      "Mean: 99.133021541666665\n",
+      "Total: 2379.192517\n",
+      "Iters: 24\n",
+      "Warmup Mean: 98.413349999999994\n",
+      "Warmup Total: 196.82669999999999\n",
       "Warmup Iters: 2\n",
-      "Fastest Mean: 94.32451648\n",
-      "Slowest Mean: 94.32451648\n",
+      "Fastest Mean: 99.133021541666665\n",
+      "Slowest Mean: 99.133021541666665\n",
       "\n",
       "online normalization\n",
       "---------------------\n",
       "Benchmark Report (ms)\n",
       "---------------------\n",
-      "Mean: 1.7e-14\n",
-      "Total: 1.7e-05\n",
+      "Mean: 1.7999999999999999e-14\n",
+      "Total: 1.8e-05\n",
       "Iters: 1000000000\n",
-      "Warmup Mean: 1.8499999999999999e-05\n",
-      "Warmup Total: 3.6999999999999998e-05\n",
+      "Warmup Mean: 1.6500000000000001e-05\n",
+      "Warmup Total: 3.3000000000000003e-05\n",
       "Warmup Iters: 2\n",
-      "Fastest Mean: 1.7e-14\n",
-      "Slowest Mean: 1.7e-14\n",
+      "Fastest Mean: 1.7999999999999999e-14\n",
+      "Slowest Mean: 1.7999999999999999e-14\n",
       "\n"
      ]
     }
@@ -572,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -604,40 +615,40 @@
       "---------------------\n",
       "Benchmark Report (ms)\n",
       "---------------------\n",
-      "Mean: 101.07316920833334\n",
-      "Total: 2425.756061\n",
-      "Iters: 24\n",
-      "Warmup Mean: 97.554480999999996\n",
-      "Warmup Total: 195.10896199999999\n",
+      "Mean: 100.59565380000001\n",
+      "Total: 2011.913076\n",
+      "Iters: 20\n",
+      "Warmup Mean: 99.722191499999994\n",
+      "Warmup Total: 199.44438299999999\n",
       "Warmup Iters: 2\n",
-      "Fastest Mean: 101.07316920833333\n",
-      "Slowest Mean: 101.07316920833333\n",
+      "Fastest Mean: 1.7976931348623157e+308\n",
+      "Slowest Mean: 100.59565379999999\n",
       "\n",
       "naive unrolled\n",
       "---------------------\n",
       "Benchmark Report (ms)\n",
       "---------------------\n",
-      "Mean: 95.434057639999992\n",
-      "Total: 2385.8514409999998\n",
-      "Iters: 25\n",
-      "Warmup Mean: 92.094906499999993\n",
-      "Warmup Total: 184.18981299999999\n",
+      "Mean: 97.335109708333334\n",
+      "Total: 2336.042633\n",
+      "Iters: 24\n",
+      "Warmup Mean: 95.877358999999998\n",
+      "Warmup Total: 191.754718\n",
       "Warmup Iters: 2\n",
-      "Fastest Mean: 95.434057640000006\n",
-      "Slowest Mean: 95.434057640000006\n",
+      "Fastest Mean: 97.335109708333334\n",
+      "Slowest Mean: 97.335109708333334\n",
       "\n",
       "online normalization\n",
       "---------------------\n",
       "Benchmark Report (ms)\n",
       "---------------------\n",
-      "Mean: 124.00298378947369\n",
-      "Total: 2356.0566920000001\n",
-      "Iters: 19\n",
-      "Warmup Mean: 124.7894295\n",
-      "Warmup Total: 249.57885899999999\n",
+      "Mean: 126.21844783333333\n",
+      "Total: 2271.932061\n",
+      "Iters: 18\n",
+      "Warmup Mean: 127.4652755\n",
+      "Warmup Total: 254.93055100000001\n",
       "Warmup Iters: 2\n",
       "Fastest Mean: 1.7976931348623157e+308\n",
-      "Slowest Mean: 124.00298378947369\n",
+      "Slowest Mean: 126.21844783333333\n",
       "\n"
      ]
     }
